# pd_spectral

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh
sl_spectral~/: sl_spectral~-help.pd  sl_spectral~.cpp
sl_test~/sl_test_dsp/: CMakeLists.txt
sl_test~/sl_test_dsp/include/: sl_test_dsp.hpp
sl_test~/sl_test_dsp/src/: sl_test_dsp.cpp
